# FicsIt-Networks-Repository

./: README.adoc
.github/workflows/: Index.yml  Website.yml  build.yml
Repository/ExamplePackage/: README.md  metadata.toml
Repository/ExamplePackage/v0.1/: README.md
Repository/NetBoot/: README.md
Source/: Cargo.toml
Source/Indexer/: Cargo.toml
Source/Repository/: Cargo.toml
Source/Repository/src/: index.rs  lib.rs  metadata.rs  model.rs  util.rs
Source/Tools/: Cargo.toml
Source/Website/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
Source/Website/src/: main.rs  util.rs
Source/Website/src/repository/: mod.rs  model.rs
Source/Website/src/routes/: middleware.rs  mod.rs  package.rs
Source/Website/src/templates/: mod.rs  package.rs
Source/Website/static/fonts/: OFL.txt
Source/Website/static/styles/: tailwind.css
Source/Website/templates/: base.html  index.html  privacy-policy.html
Source/Website/templates/package/: list.html  package.html
Tools/Indexer/: Cargo.toml
Website/: Cargo.toml  pnpm-lock.yaml  tailwind.config.js
Website/src/: main.rs  util.rs
Website/src/repository/: mod.rs  model.rs
Website/src/routes/: middleware.rs  mod.rs  package.rs
Website/src/templates/: mod.rs
Website/static/script/: main.js
Website/static/styles/: asciidoc.css  tailwind.css
Website/templates/: base.html  index.html
Website/templates/package/: card.html  list.html  package.html
