[package]
name = "ficsit-networks-repository-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22.0"
tempfile = "3.10.1"
getopts = "0.2.21"
zip = "2.1.4"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
ficsit-networks-repository = { path = "../Repository" }
semver = "1.0.23"
bitcode = { workspace = true }
