[package]
name = "ficsit-networks-repository-website"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4" }
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "fs",
    "trace",
    "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
tantivy = "0.22.0"
tempfile = "3.10.1"
getopts = "0.2.21"
zip = "2.1.4"
toml = "0.8.15"
url = "2.5.2"
reqwest = "0.12.5"
moka = { version = "0.12.8", features = ["future"] }
bitcode = { workspace = true }
ficsit-networks-repository = { path = "../Repository" }
semver = "1.0.23"
futures-util = "0.3.30"
urlencoding = "2.1.3"
itertools = "0.12.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
